@@ -52,6 +52,9 @@ Avro 1.7.2 (unreleased)
     AVRO-851. Java: Fix a bug in GenericData#toString() when escaping
     characters. (Jeff Mesnil via cutting)
 
+    AVRO-1154. Java: Fix NettyTransciever to not hang when the server
+    is stopped. (Bruno Dumon via cutting)
+
 Avro 1.7.1 (16 July 2012)
 
   NEW FEATURES
